[package]
name = "cmvm"
description = "cmvm is a simple tool that manages multiple CMake versions"
repository = "https://github.com/iepsen/cmvm"
homepage = "https://github.com/iepsen/cmvm"
version = "0.3.5"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-interface", "command-line-utilities", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
directories = "5.0.1"
parse_link_header = "0.3.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
flate2 = "1.0.26"
tar = "0.4.38"
fs_extra = "1.3.0"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
