[package]
name = "cmvm"
description = "cmvm is a simple tool that manages multiple CMake versions"
repository = "https://github.com/iepsen/cmvm"
homepage = "https://github.com/iepsen/cmvm"
version = "0.3.9"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-interface", "command-line-utilities", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
parse_link_header = "0.3.3"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
flate2 = "1.0.30"
tar = "0.4.40"
fs_extra = "1.3.0"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
